Tune tcp fanout configs

--- a/etc/emqx.conf
+++ b/etc/emqx.conf
@@ -766,7 +766,7 @@ listener.tcp.external.send_timeout_close = on
 ## See: http://erlang.org/doc/man/inet.html
 ##
 ## Value: Bytes
-## listener.tcp.external.sndbuf = 2KB
+listener.tcp.external.sndbuf = 1MB
 
 ## The size of the user-level software buffer used by the driver.
 ## Not to be confused with options sndbuf and recbuf, which correspond
@@ -778,18 +778,18 @@ listener.tcp.external.send_timeout_close = on
 ## See: http://erlang.org/doc/man/inet.html
 ##
 ## Value: Bytes
-## listener.tcp.external.buffer = 2KB
+listener.tcp.external.buffer = 1MB
 
 ## Sets the 'buffer = max(sndbuf, recbuf)' if this option is enabled.
 ##
 ## Value: on | off
-## listener.tcp.external.tune_buffer = off
+listener.tcp.external.tune_buffer = on
 
 ## The TCP_NODELAY flag for MQTT connections. Small amounts of data are
 ## sent immediately if the option is enabled.
 ##
 ## Value: true | false
-listener.tcp.external.nodelay = true
+listener.tcp.external.nodelay = false
 
 ## The SO_REUSEADDR flag for TCP listener.
 ##
